#=SHEILa=======================================================================#
#  Name        : Cpp.cpp                                                       #
#  Author      : FlowerGenius<justanortherngirl58@gmail.com>                   #
#  Version     :                                                               #
#  Copyright   :                                                               #
#  Description :                                                               #
#  Module      : SHEILa                                                        #
#  Created     : Apr 4, 2018                                                   #
#  Modified    :                                                               #
#==============================================================================#
cmake_minimum_required(VERSION 3.5)

add_subdirectory("Entity" "Cpp" "C")
